tests/baselines/reference/numericIndexerConstrainsPropertyDeclarations.errors.txt
numericIndexerConstrainsPropertyDeclarations.ts(18,5): error TS2411: Property '2.0' of type 'number' is not assignable to 'number' index type 'string'.
numericIndexerConstrainsPropertyDeclarations.ts(21,5): error TS2411: Property '3.0' of type 'MyNumber' is not assignable to 'number' index type 'string'.
numericIndexerConstrainsPropertyDeclarations.ts(50,5): error TS2411: Property '2.0' of type 'number' is not assignable to 'number' index type 'string'.
numericIndexerConstrainsPropertyDeclarations.ts(68,5): error TS2411: Property '2.0' of type 'number' is not assignable to 'number' index type 'string'.
numericIndexerConstrainsPropertyDeclarations.ts(85,5): error TS2322: Type 'number' is not assignable to type 'string'.
numericIndexerConstrainsPropertyDeclarations.ts(88,9): error TS2304: Cannot find name 'Myn'.


==== numericIndexerConstrainsPropertyDeclarations.ts (6 errors) ====
    // String indexer types constrain the types of named properties in their containing type
    
    interface MyNumber extends Number {
        foo: number;
    }
    
    class C {
        [x: number]: string;
    
        constructor() { } // ok
    
        a: string; // ok
        b: number; // ok
        c: () => {} // ok
        "d": string; // ok
        "e": number; // ok
        1.0: string; // ok
        2.0: number; // error
        ~~~
!!! error TS2411: Property '2.0' of type 'number' is not assignable to 'number' index type 'string'.
        "3.0": string; // ok
        "4.0": number; // error
        3.0: MyNumber // error
        ~~~
!!! error TS2411: Property '3.0' of type 'MyNumber' is not assignable to 'number' index type 'string'.
    
        get X() { // ok
            return '';
        }
        set X(v) { } // ok
    
        foo() { 
            return '';
        }
    
        static sa: number; // ok
        static sb: string; // ok
    
        static foo() { } // ok
        static get X() { // ok
            return 1;
        }
    }
    
    interface I {
        [x: number]: string;
    
        a: string; // ok
        b: number; // ok
        c: () => {} // ok
        "d": string; // ok
        "e": number; // ok
        1.0: string; // ok
        2.0: number; // error
        ~~~
!!! error TS2411: Property '2.0' of type 'number' is not assignable to 'number' index type 'string'.
        (): string; // ok
        (x): number // ok
        foo(): string; // ok
        "3.0": string; // ok
        "4.0": number; // error
        f: MyNumber; // error
    }
    
    var a: {
        [x: number]: string;
    
        a: string; // ok
        b: number; // ok
        c: () => {} // ok
        "d": string; // ok
        "e": number; // ok
        1.0: string; // ok
        2.0: number; // error
        ~~~
!!! error TS2411: Property '2.0' of type 'number' is not assignable to 'number' index type 'string'.
        (): string; // ok
        (x): number // ok
        foo(): string; // ok
        "3.0": string; // ok
        "4.0": number; // error
        f: MyNumber; // error
    }
    
    // error
    var b: { [x: number]: string; } = {
        a: '',
        b: 1, 
        c: () => { }, 
        "d": '', 
        "e": 1, 
        1.0: '',
        2.0: 1, 
        ~~~
!!! error TS2322: Type 'number' is not assignable to type 'string'.
!!! related TS6501 numericIndexerConstrainsPropertyDeclarations.ts:78:10: The expected type comes from this index signature.
        "3.0": '', 
        "4.0": 1, 
        f: <Myn>null, 
            ~~~
!!! error TS2304: Cannot find name 'Myn'.
    
        get X() { 
            return '';
        },
        set X(v) { }, 
        foo() { 
            return '';
        }
    }